force-app/main/default/objects/loan__Automated_Payment_Configuration__c/loan__Automated_Payment_Configuration__c.object-meta.xml
<CustomObject>
    <customHelpPage>loan__AutomatedPaymentConfigurationHelp</customHelpPage>
    <label>Automated Payment Configuration</label>
    <nameField>
        <displayFormat>APC-{0000000000}</displayFormat>
        <label>Automated Payment Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Payment Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>