force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Active__c.field-meta.xml
<CustomField>
    <fullName>loan__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>