force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Company_Identification__c.field-meta.xml
<CustomField>
    <fullName>loan__Company_Identification__c</fullName>
    <label>Company Identification(NACHA)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>