force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Event__c.field-meta.xml
<CustomField>
    <fullName>loan__Event__c</fullName>
    <label>Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LOAN PAYMENT</fullName>
            </value>
            <value>
                <fullName>LOAN REPAYMENT REFUND</fullName>
            </value>
            <value>
                <fullName>LOAN DISBURSAL</fullName>
            </value>
            <value>
                <fullName>INVESTOR WITHDRAWAL</fullName>
            </value>
            <value>
                <fullName>INVESTOR DEPOSIT</fullName>
            </value>
            <value>
                <fullName>INVESTOR PAYMENT</fullName>
            </value>
            <value>
                <fullName>FEE PAYMENT</fullName>
            </value>
            <value>
                <fullName>BROKER TRANSACTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>