force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__File_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEXT</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>