force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Filegen_Class__c.field-meta.xml
<CustomField>
    <fullName>loan__Filegen_Class__c</fullName>
    <label>Filegen Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>