force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Folder_Name__c</fullName>
    <inlineHelpText>Please create a folder with a name under the Documents tab. Then put the folder name here.</inlineHelpText>
    <label>Folder Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>