force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Immediate_Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Immediate_Destination_Name__c</fullName>
    <label>Immediate Destination Name(NACHA)</label>
    <length>23</length>
    <type>Text</type>
</CustomField>