force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Immediate_Origin__c.field-meta.xml
<CustomField>
    <fullName>loan__Immediate_Origin__c</fullName>
    <label>Immediate Origin(NACHA)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>