force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Immediate_Origin_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Immediate_Origin_Name__c</fullName>
    <label>Immediate Origin Name(NACHA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>