force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Originating_DFI_Identification__c.field-meta.xml
<CustomField>
    <fullName>loan__Originating_DFI_Identification__c</fullName>
    <label>Originating DFI Identification(NACHA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>