force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Reference_Code__c</fullName>
    <label>Reference Code(NACHA)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>