force-app/main/default/objects/loan__Automated_Payment_Configuration__c/fields/loan__Trace_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>loan__Trace_Number_Prefix__c</fullName>
    <label>Trace Number Prefix(NACHA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>