force-app/main/default/objects/loan__Automated_Payment_Configuration__c/validationRules/loan__Check_Retry_Configuration.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Retry_Configuration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Retry__c , &apos;Enabled&apos;),  OR(ISBLANK(loan__Number_of_Retry_Attempts__c),  ISNULL(loan__Number_of_Retry_Attempts__c), ISBLANK(loan__Retry_Attempt_Interval__c),  ISNULL(loan__Retry_Attempt_Interval__c )))</errorConditionFormula>
    <errorMessage>Please provide Number of Retry Attempts and/or Retry Attempt Interval.</errorMessage>
</ValidationRule>