force-app/main/default/objects/loan__Automated_Payment_Configuration__c/listViews/loan__All.listView-meta.xml
<ListView>
    <fullName>loan__All</fullName>
    <columns>NAME</columns>
    <columns>loan__Payment_Mode__c</columns>
    <columns>loan__Lock_Period__c</columns>
    <columns>Box_Folder_ID__c</columns>
    <columns>loan__Folder_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>