force-app/main/default/objects/loan__Automated_Payment_Configuration__c/listViews/loan__All_Configurations.listView-meta.xml
<ListView>
    <fullName>loan__All_Configurations</fullName>
    <columns>NAME</columns>
    <columns>loan__Payment_Mode__c</columns>
    <columns>loan__Event__c</columns>
    <columns>loan__Filegen_Class__c</columns>
    <columns>loan__Active__c</columns>
    <columns>loan__Bank_Account__c</columns>
    <columns>loan__Immediate_Destination__c</columns>
    <columns>loan__Company_Identification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configurations</label>
</ListView>