force-app/main/default/objects/loan__Automated_Payment_Configuration__c/listViews/Nacha_company_ID.listView-meta.xml
<ListView>
    <fullName>Nacha_company_ID</fullName>
    <columns>NAME</columns>
    <columns>loan__Company_Identification__c</columns>
    <columns>loan__Immediate_Destination__c</columns>
    <columns>loan__Folder_Name__c</columns>
    <columns>loan__Payment_Mode__c</columns>
    <columns>loan__Active__c</columns>
    <columns>loan__Bank_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>Nacha company ID</label>
</ListView>